<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/viewPrimeiroNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/primeiro_numero"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/InputPrimeiroNumero"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:autofillHints="123"
            android:ems="10"
            android:hint="@string/exemplo_numero1"
            android:inputType="number" />

        <TextView
            android:id="@+id/ViewSegundoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/segundo_numero"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/InputSegundoNumero"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:autofillHints="123"
            android:ems="10"
            android:hint="@string/exemplo_numero"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonSomar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/texto_somar" />

        <Button
            android:id="@+id/buttonSubtrair"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/texto_subtrair" />

        <Button
            android:id="@+id/buttonMultiplicar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/texto_multiplicar" />

        <Button
            android:id="@+id/buttonDividir"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/texto_dividir" />

        <TextView
            android:id="@+id/viewResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_resultado"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ViewResultadoFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_resultado_inicial"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>